# parallel

./: ContextGenerator.h  SchedAlgorithm.h  default_algorithm.h  default_thread.h  for.h
2.0/: CMakeLists.txt
2.0/examples/: fibonacci.cpp  timer.cpp  vector_reduce.cpp
2.0/include/: context_generator.h  gpu_algorithm.h  gpu_thread.h  member_callable_impl.h  parallel_for.h  pool.h  range.h  thread.h  thread_interface.h  unoptimized.h
examples/: CMakeLists.txt
examples/examples/: parallel_for.cpp
examples/include/: callable.h  callable_impl.h  default_algorithm.h  default_thread.h  optimized.h  overload_tag.h  parallel_reduce.h  sched_algorithm.h  scheduling_policy.h  task.h  task_interface.h
original/: Callable.h  Range.h  SchedulingPolicy.h  Task.h  Thread.h  reduce.h
